<resources>
    <string name="app_name">InterviewTask</string>

    <!-- general -->
    <string name="please_wait">Please wait…</string>
    <string name="msg_unexpected_error">Something went wrong please try again later.</string>
    <string name="tap_to_try_again">Tap to Try Again</string>
    <string name="connection_timeout">Connection Timeout</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_data_available">No User Available!</string>

    <!-- login -->
    <string name="login_email_address">Email Address</string>
    <string name="login_txt_login_to_continue">Login to continue</string>
    <string name="login_txt_welcome">Welcome, </string>
    <string name="login_forgot_password">FORGOT PASSWORD?</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="todo">todo</string>
    <string name="btn_not_now">Not Now</string>
    <string name="btn_log_out">Log Out</string>
    <string name="msg_logout_alert">Are you sure you want to logout?</string>
    <string name="lbl_alert">Alert</string>
</resources>